1.1.11/1.0.12 - xxxxxxxxxxxx
============================
* Added some missing combinations in the backgrounding API

* Added QueueSharder utility. Due to limitations in ZooKeeper's transport layer, a single queue
will break if it has more than 10K-ish items in it. This class provides a facade over multiple
distributed queues. It monitors the queues and if any one of them goes over a threshold, a new
queue is added. Puts are distributed amongst the queues.

1.1.10/1.0.11 - May 17, 2012
============================
* Generalized the ProtectedEphemeralSequential so that it works with any create mode.
withProtectedEphemeralSequential() is deprecated in favor of the new method withProtection().

* Update all uses of Preconditions to make sure they print a reasonable diagnostic message.

* Added a new wrapped Watcher type that can throw exceptions as a convenience. The various
usingWatcher() methods now can take CuratorWatcher instances.

* InterProcessSemaphore and LeaderSelector weren't respecting the default bytes feature.

* Make the default data for nodes be the local IP address. This helps in debugging and enables
the deadlock analysis in Exhibitor.

* New recipe added: DistributedDelayQueue

1.1.9/1.0.10 - May 10, 2012
===========================
* Based on suggestion in Issue 67: Added new concept of UriSpec to the ServiceInstance in the
Service Discovery Curator extension.

* User "Pierre-Luc Bertrand" pointed out a potential race condition that would cause a SysConnected
to get sent before an Expired. So, now I push the event to the parent watcher before resetting
the connection in ConnectionState.process(WatchedEvent)

* New Feature: SessionFailRetryLoop. Huge thanks to Pierre-Luc Bertrand for his work on this.
SessionFailRetryLoop is a special type of retry loop that causes all Curator methods in a thread to
fail when a session failure is detected. This enables sets of Curator operations that must be tied